<?xml version="1.0" encoding="UTF-8"?>
<com.mobiperf.ui.widget.DashboardLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<Button android:id="@+id/home_btn_networktest" 
		style="@style/DashboardButton"
		android:text="@string/btn_network_test"
		 android:drawableTop="@drawable/home_btn_networktest" />
		 
	<Button android:id="@+id/home_btn_connectionmonitor"
		style="@style/DashboardButton"
		android:text="@string/btn_connection_monitor"
		android:drawableTop="@drawable/home_btn_connectionmonitor" />
		
	<Button android:id="@+id/home_btn_trafficmonitor" 
		style="@style/DashboardButton"
		android:text="@string/btn_traffic_monitor" 
		android:drawableTop="@drawable/home_btn_trafficmonitor" />
		
	<Button android:id="@+id/home_btn_perfnearme" 
		style="@style/DashboardButton"
		android:text="@string/btn_perfnearme" 
		android:drawableTop="@drawable/home_btn_performance" />	
		
	<Button android:id="@+id/home_btn_advance" 
		style="@style/DashboardButton"
		android:text="@string/btn_lock" 
		android:drawableTop="@drawable/home_btn_lock" />		

</com.mobiperf.ui.widget.DashboardLayout>