<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<TextView android:id="@+id/about1" android:layout_width="fill_parent"
		android:layout_height="50dip" android:textSize="24px" android:gravity="center_vertical"
		android:text="Long press to uninstall and stop application" />
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<ListView android:id="@+id/list_connection"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1">
		</ListView>
		<LinearLayout android:orientation="vertical"
			android:layout_height="wrap_content" android:layout_width="wrap_content">

			<Button android:id="@+id/btn_refresh" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/btn_refresh">
			</Button>

			<Button android:id="@+id/btn_name" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/btn_name">
			</Button>
			<Button android:id="@+id/btn_total" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/btn_total">
			</Button>
			<Button android:id="@+id/btn_total_tx" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/btn_total_tx">
			</Button>
			<Button android:id="@+id/btn_total_rx" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/btn_total_rx">
			</Button>

		</LinearLayout>
	</LinearLayout>
</LinearLayout>